--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "typescript": "^5.9.2"
   },
   "eslintConfig": {
-    "rules": {
-      "@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/no-unused-vars": "off"
-    }
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "react-hooks/exhaustive-deps": "off"
   }
+}
 }
